[ADD] - Añadir registro de usuario y configurar autenticación JWT
