# src/models/user.model.ts
@@ -8,6 +8,9 @@ interface User {
   userType: UserType[];
   roleUser: string;
   password?: string;
+  email?: string  | null;
+  phone?: string | null;
+  address?: string | null;
 }
 
 interface UserModel extends User, Document {}
@@ -20,6 +23,9 @@ const UserSchema: Schema = new Schema<UserModel>(
     userType: { type: [String], required: false },
     roleUser: { type: String, required: false },
     password: { type: String, required: false },
+    email : { type: String, required: false },
+    phone : { type: String, required: false },
+    address : { type: String, required: false }
 
   },
   { timestamps: true, versionKey: false }
